samples/_failures_safe/1761198439_01ebd1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_22e37079.c: In function ‘main’:
./samples/SAFE/__tmp_22e37079.c:153:13: error: ‘destroy’ undeclared (first use in this function)
  153 |             destroy
      |             ^~~~~~~
./samples/SAFE/__tmp_22e37079.c:153:13: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_22e37079.c:153:20: error: expected ‘;’ at end of input
  153 |             destroy
      |                    ^
      |                    ;
./samples/SAFE/__tmp_22e37079.c:153:13: error: expected declaration or statement at end of input
  153 |             destroy
      |             ^~~~~~~
./samples/SAFE/__tmp_22e37079.c:153:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_22e37079.c:153:13: error: expected declaration or statement at end of input
